fix(unity-bootstrap-theme): removed unnecesary z-index
UDS-1985

--- a/packages/unity-bootstrap-theme/src/scss/extends/_images.scss
+++ b/packages/unity-bootstrap-theme/src/scss/extends/_images.scss
@@ -29,9 +29,12 @@
     }
 
     a:has(img) {
-      display: flex;
-      z-index: 1;
-      position: relative;
+
+      &:focus {
+        display: flex;
+        position: relative;
+      }
+
     }
 
     .uds-figure-caption {
